--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -3,20 +3,18 @@
   <head>
     <title>From Theory to Practice: Teaching / Learning</title>
     <meta charset="utf-8" />
-    <script src="libs/header-attrs-2.13/header-attrs.js"></script>
+    <script src="libs/header-attrs-2.10/header-attrs.js"></script>
     <link href="libs/countdown-0.3.5/countdown.css" rel="stylesheet" />
     <script src="libs/countdown-0.3.5/countdown.js"></script>
-    <link rel="stylesheet" href="../slides-style.css" type="text/css" />
-    <link rel="stylesheet" href="../xaringan-themer.css" type="text/css" />
-    <link rel="stylesheet" href="../custom.css" type="text/css" />
+    <link rel="stylesheet" href="E:/bootcamper/slides/slides-style.css" type="text/css" />
+    <link rel="stylesheet" href="E:/bootcamper/slides/xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="E:/bootcamper/slides/custom.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-.title[
 # From Theory to Practice: Teaching / Learning
-]
 
 ---
 
@@ -53,8 +51,8 @@ class: highlight-last-item, doublespace
 ## Using Partici.fi (CODE: 20533883) - Q&amp;A Mode
 &lt;img src="img/particify.png" width="1001" height="80%" /&gt;
 .pull-left[
-- Click on the .darkpink[.thick[💬 Q &amp; A]] and Click on .darkpink[.thick["Leave a Post"]] OR .darkpink[.thick[+]]
-- Write a word/any short phrase in the .darkpink[.thick[💬 Q &amp; A]] Chat box.
+- Click on the .darkpink[.thick[🗨️ Q &amp; A]] and Click on .darkpink[.thick["Leave a Post"]] OR .darkpink[.thick[+]]
+- Write a word/any short phrase in the .darkpink[.thick[🗨️ Q &amp; A]] Chat box.
 ]
 --
 .pull-left[
@@ -65,14 +63,14 @@ remain neutral 😐
 ]
 --
 .pull-right-narrow[
-<div class="countdown" id="timer_623a2fb7" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6246e0e0" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
 ---
 ## Using Partici.fi (CODE: 20533883) - Survey Mode!
 .center[
-&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_623a2f28" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_6246dea2" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -84,7 +82,7 @@ remain neutral 😐
 ---
 ## Using Partici.fi (CODE: 20533883) - Live poll!
 .center[
-&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_623a2e1e" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_6246e15a" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -107,12 +105,43 @@ class: inverse, center, middle
 class: center, middle, doublespace
 ## Your Turn
 
-<div class="countdown" id="timer_623a2ca5" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
-<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<div class="countdown" id="timer_6246dee3" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="30">
+<code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
+
 partici.fi CODE: 20533883 -&gt; 📊 Quiz mode
 
+.discussion[
+.darkpink[.thick["In the paper you have, please write THREE main challenges you face as a medical education teacher when teaching students."]
+]]
+---
+class: center, middle, doublespace
+## Your Turn
+
+<div class="countdown" id="timer_6246e10b" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="30">
+<code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+.discussion[
+.darkpink[.thick[" Exchange your paper with the person on your RIGHT."]
+]]
+
 --
+
+.discussion[
+.darkpink[.thick[" Exchange your paper with the person on your LEFT."]
+]]
+
+---
+class: center, middle, doublespace
+## Your Turn
+
+<div class="countdown" id="timer_6246de88" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+partici.fi CODE: 20533883 -&gt; 📊 Quiz mode
+
 Post your response to the question
 .discussion[
 .darkpink[.thick["What fosters self-learning among medical students?"]
@@ -120,18 +149,28 @@ Post your response to the question
 ---
 class:doublespace
 
-## Metacognitive strategies
+## Implementation perspectives of Metacognitive strategies
+- Planning
+  - "Thinking about thinking"
+  - Probing into "why" in learning  
+  - Awareness of how &amp; what they are learning  
+  - An evaluation of individual learning needs  
+--
+- Designing
+  - Generating strategies to meet the needs  
+--
+- Piloting
+  - Pilot testing the design
+--
+- Implementation
+  - Implementing the strategies
+--
+- Monitoring &amp; Evaluation
+--
+This is NOT linear. This is not a 'single cycle'.
 
-- "Thinking about thinking"
 --
-- Probing into "why's" they are learning
-- Awareness of how &amp; what they are learning
---
-- An evaluation of individual learning needs
-- Generating strategies to meet the needs
-- Implementing the strategies
---
-- Monitoring, evaluating and modifying dynamically and contextually
+- Monitoring, evaluating and modifying dynamically and contextually  
 
 ---
 class:doublespace
@@ -148,7 +187,7 @@ class:doublespace
 class: top, doublespace
 ## Your Turn!
 
-<div class="countdown" id="timer_623a3054" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+<div class="countdown" id="timer_6246df75" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -224,7 +263,7 @@ class:doublespace
 --
 - Present a justification to your answer for 30 - 60 seconds to your neighbour
 
-<div class="countdown" id="timer_623a2e90" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="10">
+<div class="countdown" id="timer_6246df80" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="10">
 <code class="countdown-time"><span class="countdown-digits minutes">00</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 ---
@@ -257,7 +296,7 @@ class:doublespace
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_623a2cc9" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6246e0db" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
@@ -305,7 +344,7 @@ class:doublespace
 - Test Oneself ⁉️
 
 --
-- Teach others 👩‍🏫 👨‍🎓
+- Teach others 👨‍🏫 👩‍🎓
 
 ---
 # Logistics (unused)
@@ -365,19 +404,6 @@ if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
     deleted = true;
   });
 })();
-// add `data-at-shortcutkeys` attribute to <body> to resolve conflicts with JAWS
-// screen reader (see PR #262)
-(function(d) {
-  let res = {};
-  d.querySelectorAll('.remark-help-content table tr').forEach(tr => {
-    const t = tr.querySelector('td:nth-child(2)').innerText;
-    tr.querySelectorAll('td:first-child .key').forEach(key => {
-      const k = key.innerText;
-      if (/^[a-z]$/.test(k)) res[k] = t;  // must be a single letter (key)
-    });
-  });
-  d.body.setAttribute('data-at-shortcutkeys', JSON.stringify(res));
-})(document);
 (function() {
   "use strict"
   // Replace <script> tags in slides area to make them executable
