--- a/slides/learning_strategies/01-learning_strat.html
+++ b/slides/learning_strategies/01-learning_strat.html
@@ -63,14 +63,14 @@ remain neutral 😐
 ]
 --
 .pull-right-narrow[
-<div class="countdown" id="timer_6246e0e0" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_62556858" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
 ---
 ## Using Partici.fi (CODE: 20533883) - Survey Mode!
 .center[
-&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_6246dea2" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+&lt;img src="img/particify.png" width="1001" height="80%" /&gt;<div class="countdown" id="timer_62556784" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -82,7 +82,7 @@ remain neutral 😐
 ---
 ## Using Partici.fi (CODE: 20533883) - Live poll!
 .center[
-&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_6246e15a" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+&lt;img src="img/particify.png" width="80%" /&gt;<div class="countdown" id="timer_62556864" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 ]
@@ -105,7 +105,7 @@ class: inverse, center, middle
 class: center, middle, doublespace
 ## Your Turn
 
-<div class="countdown" id="timer_6246dee3" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="30">
+<div class="countdown" id="timer_6255687f" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -118,7 +118,7 @@ partici.fi CODE: 20533883 -&gt; 📊 Quiz mode
 class: center, middle, doublespace
 ## Your Turn
 
-<div class="countdown" id="timer_6246e10b" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="30">
+<div class="countdown" id="timer_62556609" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -136,7 +136,7 @@ class: center, middle, doublespace
 class: center, middle, doublespace
 ## Your Turn
 
-<div class="countdown" id="timer_6246de88" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_6255667c" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -153,25 +153,38 @@ class:doublespace
 - Planning
   - "Thinking about thinking"
   - Probing into "why" in learning  
-  - Awareness of how &amp; what they are learning  
+  - Awareness of how &amp; what they are learning
   - An evaluation of individual learning needs  
---
-- Designing
-  - Generating strategies to meet the needs  
---
-- Piloting
-  - Pilot testing the design
---
-- Implementation
-  - Implementing the strategies
---
-- Monitoring &amp; Evaluation
---
-This is NOT linear. This is not a 'single cycle'.
 
 --
-- Monitoring, evaluating and modifying dynamically and contextually  
+- Designing &amp; developing the strategies to meet the needs  
+  - Documenting the rationale for design
+  - Evaluating the cost requirements (economic, time, human resources, technology requirements)
 
+---
+class:doublespace
+
+## Implementation perspectives of Metacognitive strategies (contd.)
+
+- Piloting (Test/Modify/Re-test/)  
+  - Piloting must be in alignment with implementation, monitoring and evaluation.
+  - Documenting the rationale for changes  
+    - Update the cost and value (tangible &amp; intangible)  
+    - Possible the Short term and long term impacts
+
+---
+class:doublespace
+
+## Implementation perspectives of Metacognitive strategies (contd.)
+- Implementation of the strategies  
+  - Documenting the rationale &amp; strategies
+  - Monitoring and evaluation must be built into the system &amp; each process
+  - To plan M&amp;E from beginning and not as an 'after thought'
+
+--
+- Monitoring &amp; Evaluation (NOT linear / NOT one cycle)  
+  - Dynamic &amp; contextualed
+  - Documenting the challenges and limitations of the M&amp;E (contiuous improvement)
 ---
 class:doublespace
 
@@ -187,7 +200,7 @@ class:doublespace
 class: top, doublespace
 ## Your Turn!
 
-<div class="countdown" id="timer_6246df75" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
+<div class="countdown" id="timer_62556625" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="20">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -263,7 +276,7 @@ class:doublespace
 --
 - Present a justification to your answer for 30 - 60 seconds to your neighbour
 
-<div class="countdown" id="timer_6246df80" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="10">
+<div class="countdown" id="timer_62556883" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="10">
 <code class="countdown-time"><span class="countdown-digits minutes">00</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 ---
@@ -271,9 +284,13 @@ class:doublespace
 
 ## Insight into "learning"
 
-- Some difficulty is GOOD for learning for all students
-- MORE difficult is BETTER for learning for some students
-- MOST difficult is BEST for learning, but only a few manage
+- Some difficulty is GOOD for learning for all students  
+
+--
+- MORE difficult is BETTER for learning for some students  
+
+--
+- MOST difficult is BEST for learning, but only a few manage  
 
 ---
 class:doublespace
@@ -296,7 +313,7 @@ class:doublespace
 
 - https://partici.fi (CODE: 20533883)  
 
-<div class="countdown" id="timer_6246e0db" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<div class="countdown" id="timer_625568f2" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 - **What do you understand by "active learning" ?**
@@ -316,8 +333,15 @@ class:doublespace
 ## Text Books
 
 - **Do you suggest specific text-books and page numbers where to read something from ?**  
-- Do your students **know** how to read from a text-book?  
+
+--
+- Do your students **know** how to read from a text-book? 
+- Have you **verified** that they know how to read from a text-book?
+
+--
 - Book reading is an art ...
+
+--
 - Make them **read** text-books**
 - Teach them to "skim" a topic **Before** class (PREVIEW)
 
@@ -344,9 +368,83 @@ class:doublespace
 - Test Oneself ⁉️
 
 --
-- Teach others 👨‍🏫 👩‍🎓
+- Teach others 👨‍🏫 👨‍🎓
 
 ---
+class:middle, highlight-last-item, doublespace
+
+<div class="countdown" id="timer_62556847" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+## How to implement "metacognitive learning strategies" ?
+- https://partici.fi (CODE: 20533883)  
+- Preview 😎
+
+---
+class:middle, highlight-last-item, doublespace
+
+<div class="countdown" id="timer_62556653" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+## How to implement "metacognitive learning strategies" ?
+- https://partici.fi (CODE: 20533883)  
+- Attend Class 🏫  
+
+---
+class:middle, highlight-last-item, doublespace
+
+<div class="countdown" id="timer_625568df" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+## How to implement "metacognitive learning strategies" ?
+- https://partici.fi (CODE: 20533883)  
+- Make Notes ✍️  
+
+---
+class:middle, highlight-last-item, doublespace
+
+<div class="countdown" id="timer_625567f7" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+## How to implement "metacognitive learning strategies" ?
+- https://partici.fi (CODE: 20533883)  
+- Paraphrase - Expand &amp; Condense 📚
+  
+---
+class:middle, highlight-last-item, doublespace
+
+<div class="countdown" id="timer_62556840" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+## How to implement "metacognitive learning strategies" ?
+- https://partici.fi (CODE: 20533883)  
+- Review/Revise 🔖
+
+---
+class:middle, highlight-last-item, doublespace
+
+<div class="countdown" id="timer_6255696a" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+## How to implement "metacognitive learning strategies" ?
+- https://partici.fi (CODE: 20533883)  
+- Test Oneself ⁉️
+  
+---
+class:middle, highlight-last-item, doublespace
+
+<div class="countdown" id="timer_625568a1" style="right:0;bottom:0;" data-audio="../sound/ding.mp3" data-warnwhen="60">
+<code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+</div>
+
+## How to implement "metacognitive learning strategies" ?
+- https://partici.fi (CODE: 20533883)  
+- Teach others 👨‍🏫 👩‍🎓
+  
+---
+ 
 # Logistics (unused)
 
 - Everything in one place:[drakileshr.github.io](http://drakileshr.github.io/bootcamper/slides/learning-strategies/01-learning_strat.html)
